feat: add section: GC Algorithms